--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <!-- Footer -->
       <footer>
         created by
-        <a href="https://github.com/MuhammadAli-ai/responsive-404-not-found"
+        <a href="https://github.com/mo-khaife-bot
+/responsive-404-not-found"
           >mo-khaife
         </a>
         - devChallenges.io
